# etrade_xml2xlsx

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  xml2xlsx.py
.github/: dependabot.yml
assets/: icon_512x512@2x@2x.icns
docs/: CONTRIBUTING.md  REQUIREMENTS.md
requirements/: requirements.txt
src/: __init__.py  cli.py  gui.py  main.py  setup.py
src/logic/: __init__.py  core.py  runner.py
src/xml2xlsx/: xml2xlsx.py
