[tool.poetry]
name = "etrade-xml2xlsx"
version = "1.0.0"
description = "App for converting XML to XLSX"
license = "GPLv3"
authors = ["mnau23"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "~2.2"
py2app = "~0.28"
# pyinstaller = "~5.13"
xlsxwriter = "~3.2"

[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~24.4"
isort = "~5.13"
pylint = "~3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
# exclude_dirs = [""]

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
atomic = true

[tool.pylint.messages_control]
disable = ''',
    abstract-class-instantiated,
    broad-exception-caught,
    import-error,
    no-member,
    protected-access,
    '''

[tool.pylint.options]
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"
max-line-length = "140"
