[tool.poetry]
name = "etrade-xml2xlsx"
version = "1.0.0"
description = "App for converting XML to XLSX"
license = "GPLv3"
authors = ["mnau23"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
defusedxml = "~0.7"
pandas = "2.3.3"
py2app = "~0.28"
# pyinstaller = "~5.13"
setuptools = "70.3.0"
xlsxwriter = "~3.2"

[tool.poetry.group.dev.dependencies]
bandit = "~1.9"
black = "~25.12"
isort = "~7.0"
mypy = "~1.19"
pip-audit = "~2.10"
pylint = "~4.0"
types-setuptools = "80.9.0.20251223"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
# exclude_dirs = [""]
skips = ["B405"]

[tool.black]
target-version = ["py312"]
line-length = 90

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
atomic = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ''',
    abstract-class-instantiated,
    broad-exception-caught,
    import-error,
    no-member,
    protected-access,
    too-many-locals
    '''

[tool.pylint.options]
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"
max-line-length = "140"
